# langchain_tutorial

./: .env.example  .gitignore  CHANGELOG_IMPROVEMENTS.md  PROJECT_EXPLAIN.md  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yaml
langchain-crash-course/1_chat_models/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py
langchain-crash-course/1_chat_models/firebase/: 5_chat_model_save_message_history_firebase.py  chat_history_firebase.py
langchain-crash-course/2_prompt_templates/: prompt_template.py  string_prompt_template.py
langchain-crash-course/3_chains/: 1_chain_basic.py  1_chains_basic.py  2_chains_runnable_sequence.py  3_chains_extended.py  4_chains_parallel.py  5_chains_branching.py  sample.py
langchain-crash-course/4_rag/: 1a_rag_basic.py  1b_rag_basic.py  1b_rag_basic_query.py  2a_rag_basic_metadata.py  2a_rag_basic_metadata_robust.py  2a_rag_with_metadata.py  2b_rag_basic_metadata_improved.py  2b_rag_basic_metadata_query.py  3_rag_text_splitting.py  4_rag_multi_model_embeddings.py  5_rag_retriever_search_types.py  6_rag_retriever_llm_response.py  7_rag_llm_conversation.py  8_rag_web_scrape_basic.py  8_rag_web_scrape_firecrawl.py  rag_with_metadata.py
langchain-crash-course/4_rag/tests/: README.md  conftest.py  test_rag_metadata_improved.py  test_rag_with_metadata.py
langchain-crash-course/4_rag/utils/: logger.py
langchain-crash-course/5_agents_tools/: README.md  __init__.py  agent_react_chat.py  agent_react_rag_context.py  agent_react_rag_pdf.py  agent_react_rag_pdf_advanced.py  agent_tools_basic.py  rag.py  rag_pdf.py  rag_pdf_advanced.py
langchain-crash-course/5_agents_tools/tests/: test_agent_tools_basic.py
langchain-crash-course/5_agents_tools/tools/: tool_basetool.py  tool_constructor.py  tool_decorator.py
langchain-crash-course/5_agents_tools/util/: logger.py
langchain-crash-course/5_agents_tools/utils/: logger.py
langchain_streamlit/restaurant_name_generator/: app.py  generator.py  generator_custom.py  generator_details.py
scripts/: setup_models.py
