[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.3.1",
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "python-dotenv>=1.0.1",
    "langchain-google-genai>=2.0.9",
    "langchain-anthropic>=0.3.3",
]
