[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.3.1",
    "langchain>=0.3.15",
    "langchain-community>=0.3.15",
    "python-dotenv>=1.0.1",
    "langchain-google-genai>=2.0.9",
    "langchain-anthropic>=0.3.3",
    "langchain-google-firestore>=0.5.0",
    "langchain-ollama>=0.2.3",
    "chromadb>=0.6.3",
    "langchain-chroma>=0.2.2",
    "streamlit>=1.43.2",
    "sentence-transformers>=5.1.0",
    "nltk>=3.9.1",
    "langchain-huggingface>=0.3.1",
    "beautifulsoup4>=4.13.5",
    "aioconsole>=0.8.1",
    "wikipedia>=1.4.0",
    "tavily>=1.1.0",
    "pypdf>=6.2.0",
    "fitz>=0.0.1.dev2",
    "pytesseract>=0.3.13",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.1",
    "opencv-python>=4.12.0.88",
    "unstructured>=0.18.18",
    "pdfminer>=20191125",
    "tesseract>=0.1.3",
    "hf-xet>=1.1.8",
    "pdfminer-six>=20251107",
    "pi-heif>=1.1.1",
    "unstructured-inference>=1.1.1",
    "pdf2image>=1.17.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "firebase-admin>=6.7.0",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]
